--- a/employee-management-frontend/src/app/update-employee/update-employee.component.html
+++ b/employee-management-frontend/src/app/update-employee/update-employee.component.html
@@ -20,7 +20,7 @@
                 [(ngModel)] = "employee.email" name = "email">
         </div>
     
-        <button class = "btn btn-success" type ="submit">Submit</button>
+        <button class = "btn btn-success my-3" type ="submit">Submit</button>
     
     </form>
     </div> 
